[B][COLOR=FF56ADDA]v4.5.1[/COLOR][/B]
• Added: New viewtype "Banner Art" for Movies/TV Shows/Seasons
• Fixed: Addon.xml requirements for newest skinshortcuts script

[B][COLOR=FF56ADDA]v4.5.0[/COLOR][/B]
• Fixed: Fixed viewtype settings for YouTube plugin (I hope so)
• Fixed: "Show IDs" dialog

[B][COLOR=FF56ADDA]v4.4.9a[/COLOR][/B]
• Added: Edit Shutdow Menu and Edit Main Menu to the default shutdown menu entries if somebody can't access the settings to perform a reset (skinshortcuts script bug)

[B][COLOR=FF56ADDA]v4.4.9[/COLOR][/B]
• Fixed: Window open / close music logo animation
• Added: Customizable shutdownmenu

[B][COLOR=FF56ADDA]v4.4.8[/COLOR][/B]
• Fixed: ClassicSlide previos texture issue while moving
• Fixed: Unmatched parentheses errors and other code issues
• Fixed: Fall back of A_DTS / A_EAC3 video flags
• Fixed: Small navigation issue in Skin Settings
• Changed: Clock with start / finish time will be displayed if the player is paused

[B][COLOR=FF56ADDA]v4.4.7[/COLOR][/B]
• Fixed: Plot for sets (Shelf)
• Fixed: Visible empty disc art if "group movies to sets" is activated (Shelf)
• Fixed: Wrong labels if "group movies to sets" is activated (Thumb List & Video Wall)
• Fixed: Removed rating icon for sets in some views

[B][COLOR=FF56ADDA]v4.4.6[/COLOR][/B]
• Added: Grunge/Alternative music genre icon
• Added: Support to set an own genre icon folder (has to look the same as the Extrapack source)
• Added: Scrollbar to Wall and 3D Wall view
• Added: Option to switch between Poster/Landscape in NetFilx view
• Added: Info dialog to show all used Video/Audio viewtype IDs

[B][COLOR=FF56ADDA]v4.4.5[/COLOR][/B]
• Fixed: NextUp still there dialog swapped episode/season labels
• Added: Video/music genre icons (more icons/options will come). Requires Extrapack refresh

[B][COLOR=FF56ADDA]v4.4.4a[/COLOR][/B]
• Fixed: Broken NetFilx landscape thumbs

[B][COLOR=FF56ADDA]v4.4.4[/COLOR][/B]
• Fixed: Ugly startup animation behaviour in combination with intro/playlist