@@ -434,7 +434,6 @@
 			<texture background="true">windows/bg/bg_diffuse.png</texture>
 			<include>FanartFade</include>
 			<visible>[Control.IsVisible(50) + !Window.IsVisible(weather) + !Window.IsVisible(musicplaylisteditor) + !Window.IsVisible(profiles)]
-				| [Control.IsVisible(57) + !Window.IsVisible(profiles)]
 				| Control.IsVisible(56)
 				| Control.IsVisible(582)
 				| [Control.IsVisible(584) + IsEmpty(ListItem.Art(fanart))]
@@ -451,7 +450,6 @@
 				| [Window.IsActive(script-ExtendedInfo Script-DialogVideoInfo.xml) + !Window.IsActive(movieinformation)]
 				| Window.IsActive(virtualkeyboard)
 			</visible>
-			<!--<animation effect="fade" time="0" end="50" condition="Window.IsActive(favourites) | Control.IsVisible(560) | Control.IsVisible(561)">Conditional</animation>-->
 		</control>
 		<control type="image">
 			<include>FullscreenDimensions</include>
@@ -462,6 +460,14 @@
 				| Window.IsActive(favourites)
 			</visible>
 			<animation effect="fade" time="0" end="50" condition="true">Conditional</animation>
+		</control>
+		<control type="image">
+			<include>FullscreenDimensions</include>
+			<texture background="true">windows/bg/bg_diffuse.png</texture>
+			<include>FanartFade</include>
+			<visible>[Control.IsVisible(57) + !Window.IsVisible(profiles)]
+			</visible>
+			<animation effect="fade" time="0" end="90" condition="true">Conditional</animation>
 		</control>
 		<control type="image">
 			<include>FullscreenDimensions</include>
