@@ -693,11 +693,11 @@
 					<onclick>SetProperty(Dialog.3.BuiltIn,CleanLibrary(video)||SetFocus(20))</onclick>
 					<onclick>SetProperty(Dialog.4.Label,$LOCALIZE[31062])</onclick>
 					<onclick>SetProperty(Dialog.4.BuiltIn,CleanLibrary(music)||SetFocus(20))</onclick>
-					<onclick>RunScript(script.toolbox,info=selectdialog,header=$LOCALIZE[799])</onclick>
 					<onclick>SetProperty(Dialog.5.Label,$LOCALIZE[31093])</onclick>
 					<onclick>SetProperty(Dialog.5.BuiltIn,RunScript(script.imdbupdate,movies|top250,hidden)||SetFocus(20))</onclick>
 					<onclick>SetProperty(Dialog.6.Label,$LOCALIZE[31190])</onclick>
 					<onclick>SetProperty(Dialog.6.BuiltIn,RunScript(script.imdbupdate,mpaa,hidden)||SetFocus(20))</onclick>	
+					<onclick>RunScript(script.toolbox,info=selectdialog,header=$LOCALIZE[799])</onclick>
 					<visible>!Skin.HasSetting(DisableLibraryRefreshButton)</visible>
 				</control>
 				<control type="button" id="214">
