@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.bellofredo" version="4.5.1" name="Bello Fredo" provider-name="sualfred">
+<addon id="skin.bellofredo" version="4.5.2" name="Bello Fredo" provider-name="sualfred">
   <requires>
 		<import addon="xbmc.gui" version="5.9.0" />
 		<import addon="service.skin.widgets" version="0.0.29"/>
@@ -10,7 +10,7 @@
 		<import addon="script.globalsearch" version="2.0.8" />
 		<import addon="script.artistslideshow" version="1.6.5" />
 		<import addon="script.playalbum" version="1.0.1" />
-		<import addon="script.extendedinfo" version="1.0.0" />
+		<import addon="script.extendedinfo" version="2.0.10" />
 		<import addon="script.skin.info.service" version="1.0.0" />
 		<import addon="script.grab.fanart" version="0.12.8" />
 		<import addon="script.skinshortcuts" version="0.5.0" />
